# aoc2020

./: .gitignore  Main.hs  README.md  aoc2020.cabal  flake.nix  hie.yaml
src/AoC/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
