cabal-version:       2.4

name:                aoc2020
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Kevin Mullins
maintainer:          46154511+pnotequalnp@users.noreply.github.com
copyright:           © 2020 Kevin Mullins

common common
  default-language:    Haskell2010
  build-depends:       base ^>=4.13.0.0
                     , advent-of-code-api
                     , containers
                     , split
                     , text
                     , vector
  default-extensions:  BangPatterns
                     , BlockArguments
                     , EmptyCase
                     , FlexibleContexts
                     , LambdaCase
                     , NoStarIsType
                     , OverloadedStrings
                     , PatternSynonyms
                     , RankNTypes
                     , TupleSections
                     , TypeApplications
                     , TypeOperators
                     , ViewPatterns
  ghc-options:         -Wall

library
  import:              common
  hs-source-dirs:      src
  exposed-modules:     AoC.Day1
                     , AoC.Day2
                     , AoC.Day3
                     , AoC.Day4
                     , AoC.Day5
  build-depends:       base ^>=4.13.0.0
                     , hashtables

executable aoc2020
  import:              common
  main-is:             Main.hs
  build-depends:       aoc2020

test-suite aoc2020-test
  import:              common
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
